--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+.flex-container{
+  display: block;
+  margin: auto;
+  width: 600px;
+  font-family: "Helvetica Neue";
+  background-color: lightgray;
+  margin-bottom: 100px;
+  text-align:center;
+}
