--- a/src/app/http-test/http-test.component.html
+++ b/src/app/http-test/http-test.component.html
@@ -6,7 +6,7 @@
 <p>
   <img [src]="apitulos">
 </p>
-<!--Palauttaa tietyn päivän kaikkien Suomen rataverkon junien junanumerot-->
+<!--Palauttaa tietyn päivän kaikkien Suomen rataverkon junien junanumerot (very useful), ekat 20-->
 <div class = "flex-container">
   <h1>Train numbers for the trains on Finnish railroads on 2018-01-18 (first 20) </h1>
   <div *ngFor="let tulos of junatulos; let i = index;">
